--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="container">
         <div id="search-container">
-            <form action="#" method="GET">
-                <input type="text" name="search" placeholder="Search movies...">
+            <form id="search-form">
+                <input type="text" id="search-input" name="search" placeholder="Search movies...">
                 <input type="submit" value="Search">
             </form>
         </div>
@@ -115,5 +115,7 @@
             <p>&copy; 2024 Online Movie Database</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
